# BalatroSaveManager

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.zh_CN.md
src/: config.json  event_manager.py  gui.py  keyboard_handler.py  keyboard_monitor.py  launch_balatro.py  main.py  preview_window.py  read_config.py  save_handler.py  screenshot.py  setup.py
