[project]
name = "BalatroSaveManager"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "RiwiHow", email = "53964574+RiwiHow@users.noreply.github.com"},
]
dependencies = ["pynput>=1.7.7"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
